# Parrot

./: .gitignore  DESIGN.md  all_voices.txt  check_mimi.py  check_qwen.py  check_split.py  generate_data.py  main.py  model.py  pyproject.toml  qwen_tts_enc_demo.py  qwen_wrapper.py  requirements.txt  sentences.txt  sync_model.sh  test_moshi.py  test_qwen.py  train.py  train_moshi.py  train_qwen.py  voices.txt
