[project]
name = "parrot"
version = "0.1.0"
description = "Parrot Voice Cloning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edge-tts>=6.1.12",
    "moshi>=0.2.1",
    "pydub>=0.25.1",
    "soundfile>=0.13.1",
    "speechbrain>=1.0.2",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.48.2",
    "wandb>=0.19.5",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch" }]
torchvision = [{ index = "pytorch" }]
torchaudio = [{ index = "pytorch" }]

