[project]
name = "parrot"
version = "0.1.0"
description = "Parrot Voice Cloning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edge-tts>=6.1.12",
    "moshi>=0.2.1",
    "pydub>=0.25.1",
    "librosa>=0.10.0",
    "soundfile>=0.13.1",
    "speechbrain>=1.0.2",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchcodec>=0.10.0",
    "transformers>=4.49.0",
    "wandb>=0.19.5",
]

